--- a/front/package.json
+++ b/front/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^3.22.2",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "notyf": "^3.9.0",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.6.0",
     "vue-axios": "^3.2.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
